# IP-Practice

./: README.md  pyproject.toml
Prototype/aoki/: aoki_main.py  calculation.py  draw_function.py  feature_detection.py  functions.py  oneFrame.py  reversal.py  settings.py  test.py
Prototype/hirakawa/: calculation.py  draw_function.py  functions.py  hirakawa_main.py  settings.py  synchronize_game.py  test.py  vector_functions.py
Prototype/hirakawa/synchronize_game/: area_settings.py  caputuretest.py  cupytest.py  display_functions.py  display_settings.py  draw_function.py  functions.py  game_test.py  hirakawa_main.py  recognition_pose.py  recognition_test.py  regist_functions.py  register.py  settings.py  synchronize_game.py  test.py
Prototype/hozumi/: calculation.py  caputuretest.py  countDown.py  exception.py  functions.py  hozumi_main.py  math_function.py  multi_process.py  mytimer.py  oneFrame.py  requirements.txt  settings.py  vector_functions.py
production/: main.py
production/modules/: SynchronizeProcess.py  area_settings.py  calculation.py  display_functions.py  display_settings.py  draw_function.py  functions.py  game_test.py  multi_process.py  recognition_pose.py  regist_functions.py  register.py  settings.py  synchronize_game.py  vector_functions.py
