[tool.poetry]
name = "ip-practice"
version = "0.1.0"
description = ""
authors = ["YumaHozumi <cpucmptrpython72@gmail.com>"]
readme = "README.md"
packages = [{include = "ip_practice"}]

[tool.poetry.dependencies]
python = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
